--- a/projet_prog/projet_prog/Base.lproj/Main.storyboard
+++ b/projet_prog/projet_prog/Base.lproj/Main.storyboard
@@ -34,25 +34,31 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="240" id="Urt-sn-nHy" userLabel="dataCell" customClass="TableViewCell" customModule="projet_prog" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="309" height="240"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="dataCell" rowHeight="381" id="Urt-sn-nHy" userLabel="dataCell" customClass="TableViewCell" customModule="projet_prog" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="309" height="381"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Urt-sn-nHy" id="zG5-m4-WI7">
-                                            <rect key="frame" x="0.0" y="0.0" width="309" height="240"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="309" height="381"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ln6-gw-Vz9">
-                                                    <rect key="frame" x="17" y="43" width="275" height="154"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ln6-gw-Vz9">
+                                                    <rect key="frame" x="21" y="16" width="267" height="323"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Legend" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kcU-4m-ha3">
-                                                    <rect key="frame" x="126" y="205" width="57" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Legend" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kcU-4m-ha3">
+                                                    <rect key="frame" x="126" y="344" width="57" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="kcU-4m-ha3" secondAttribute="bottom" constant="5" id="6mU-Ve-Tfm"/>
+                                                <constraint firstItem="kcU-4m-ha3" firstAttribute="top" secondItem="ln6-gw-Vz9" secondAttribute="bottom" constant="5" id="8El-Sn-Ur2"/>
+                                                <constraint firstItem="ln6-gw-Vz9" firstAttribute="top" secondItem="zG5-m4-WI7" secondAttribute="topMargin" constant="5" id="BK0-Ak-vjT"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ln6-gw-Vz9" secondAttribute="trailing" constant="5" id="Cwp-mr-syH"/>
+                                                <constraint firstItem="kcU-4m-ha3" firstAttribute="top" secondItem="ln6-gw-Vz9" secondAttribute="bottom" constant="5" id="sFN-hb-pHN"/>
+                                                <constraint firstItem="ln6-gw-Vz9" firstAttribute="leading" secondItem="zG5-m4-WI7" secondAttribute="leadingMargin" constant="5" id="yOo-MF-hEn"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="Legend" destination="kcU-4m-ha3" id="UIM-Dk-Wg7"/>
