--- a/projet_prog/projet_prog/Base.lproj/Main.storyboard
+++ b/projet_prog/projet_prog/Base.lproj/Main.storyboard
@@ -21,6 +21,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="+"/>
+                                <connections>
+                                    <segue destination="84c-By-lLz" kind="show" id="Vs6-7f-kb1"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="New match" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1UL-yy-0BF">
                                 <rect key="frame" x="290" y="102" width="87" height="21"/>
@@ -78,6 +81,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="130.53435114503816" y="-27.464788732394368"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="1UR-ih-mQd">
+            <objects>
+                <viewController id="84c-By-lLz" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="15L-24-M5H">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="WHS-n8-mYa"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="GlO-dP-tlJ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LEX-1E-3bl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1444" y="-27"/>
         </scene>
     </scenes>
     <resources>
